@@ -35,6 +35,7 @@
 #include "twitux-network.h"
 #include "twitux-parser.h"
 #include "twitux-app.h"
+#include "twitux-send-message-dialog.h"
 
 #define DEBUG_DOMAIN	  "Network"
 #define TWITUX_HEADER_URL "http://twitux.sourceforge.net/client.xml"
@@ -767,7 +768,7 @@ network_cb_on_users (SoupMessage *msg,
 	} else if (users){
 		/* Followers lisy retrived */
 		user_followers = users;
-		/* TODO: some UI code here. */
+		twitux_message_set_followers (user_followers);
 	} else {
 		twitux_app_set_statusbar_msg (_("Users parser error."));
 	}
